Take surrogate pairs into account in UTF8InputStream::CountValidUTF8Bytes. Bug 299111, r=darin, sr=dbaron